# tangollm

./: .gitignore  CMakeLists.txt  analytical_pim_config.yaml  analytical_pim_patch6_config.yaml  analytical_pim_patch7a_config.yaml  analytical_pim_trace_config.yaml  analytical_pim_trace_final_config.yaml  analytical_pim_trace_hbm2e_8hi_config.yaml  analytical_pim_trace_m4kv2_h6_config.yaml  config.yaml
docs/: analytical_pim.md  analytical_pim_cost_model.md
eval/: CMakeLists.txt  analytical_pim.cpp  test.cpp
results/m4kv2_h6_formal/: SHA256SUMS  m4kv2_h6_aggregate.csv  m4kv2_h6_cost_aggregate.csv  m4kv2_h6_cost_per_query.csv  m4kv2_h6_hardware_cost.csv  simulation_stdout.txt
src/: CMakeLists.txt
src/analytical/: CMakeLists.txt  analytical_pim.cpp  analytical_pim.h  gofa_trace.cpp  gofa_trace.h
src/hardware/: CMakeLists.txt  GNN_impl.cpp  base.h  cluster.cpp  executor.cpp  executor.h  layer_impl.h
src/model/: CMakeLists.txt  TF_GNN.cpp  model.h  model_config.h  tf_gnn.h
src/module/: module.cpp  module.h  timeboard.cpp
src/scheduler/: graph.h  scheduler.cpp  scheduler.h  sequence.h
tests/: analytical_pim_trace_fixture_config.yaml  generate_gofa_trace_fixture.py  test_analytical_pim_trace.py  test_hbm2e_8hi_topology.py  test_patch7a_h100_calibration.py
tests/fixtures/gofa_trace_v1/fixture_task_formal_v1/: query_000000.json  query_000001.json  summary.json  trace_index.jsonl
tools/: analyze_gofa_trace_final.py  run_patch6_cached_kv_grid.py  run_patch6_local_combine_break_even.py  run_patch6_sensitivity.py  run_patch7a_h100_calibration.py
